--- a/kinematica/2dim_intro.tex
+++ b/kinematica/2dim_intro.tex
@@ -7,7 +7,8 @@
 	\xmtitle{Inleiding}{}
     \xmsource\xmuitleg
 
-	Als we in een vlak bewegen, hebben we te maken met een tweedimensionale beweging. Ten opzichte van een referentiestelsel met twee assen, kunnen we de beweging beschrijven.
+	Als we in een vlak bewegen, hebben we te maken met een tweedimensionale beweging. 
+	Ten opzichte van een referentiestelsel met twee assen, kunnen we de beweging beschrijven.
 	\begin{image}
 		\includegraphics[width=.7\textwidth]{sterrentrajecten}
 	\end{image}
