--- a/kinematica/2dim_onafhankelijkheidsbeginsel.tex
+++ b/kinematica/2dim_onafhankelijkheidsbeginsel.tex
@@ -8,17 +8,19 @@
     \xmsource\xmuitleg
 
 \begin{denkvraag*}{}
-	Kan je in het filmpje vaststellen dat de horizontale beweging van de bal die wordt opgeworpen vanuit de laadbak van een pickup truck een invloed heeft op de manier waarop de bal in verticale zin beweegt?
+In onderstaand filmpje wordt een bal verticaal opgeworpen vanuit de laadbak van een horizontaal bewegende pick up truck. 
+Heeft de horizontale beweging van de bal een invloed op de verticale beweging van de bal?
+
 	\begin{center}
 		\youtube{j1URC2G2qnc}
 	\end{center}
 \end{denkvraag*}
 
 \begin{definition}{}
-	Het \textbf{onafhankelijkheidsbeginsel} stelt dat een beweging in een bepaalde richting geen invloed uitoefent op de beweging in een andere richting. 
+	Het \textbf{onafhankelijkheidsbeginsel} stelt dat een beweging in een bepaalde richting geen invloed heeft op de beweging in een andere richting. 
 \end{definition}
 
-Als gevolg kunnen we de beweging beschrijven als een samenstelling van een horizontale en een verticale beweging, onafhankelijk van elkaar.
+Als gevolg kunnen we een tweedimensionale beweging beschrijven als een samenstelling van een horizontale en een verticale beweging, onafhankelijk van elkaar.
 
 
 \end{document}
