zie word comments; grotendeels doorgevoerd (#153)

--- a/kinematica/2dim_eenparige_cirkelbeweging.tex
+++ b/kinematica/2dim_eenparige_cirkelbeweging.tex
@@ -7,11 +7,23 @@
 	\xmtitle{De eenparig cirkelvormige beweging}{}
     \xmsource\xmuitleg
 
-De cirkelbeweging is op het eerste zicht misschien een zeer eenvoudige beweging maar wel alom tegenwoordig. Denk maar aan een tol, een kermisattractie zoals een carrousel, wielen, planeetbanen of aan het nemen van een bocht met de auto of de fiets. Vandaar dat het een toch een erg belangrijke beweging is. Wij bestuderen een eenparige cirkelvormige beweging (ECB). Dat betekent dat de baan van het object een cirkel is en dat de grootte van de snelheid waarmee de baan wordt doorlopen, constant is.
+De cirkelbeweging is op het eerste zicht misschien een zeer eenvoudige beweging maar wel alom tegenwoordig. 
+Denk maar aan een kermisattractie zoals een carrousel, wielen, planeetbanen of aan het nemen van een bocht met de auto of de fiets. 
+Vandaar dat het een toch een zeer belangrijke beweging is. 
+Wij bestuderen een eenparige cirkelvormige beweging (ECB). 
+Dat betekent dat de baan van het object een cirkel is en dat de grootte van de snelheid waarmee de baan wordt doorlopen, constant is.
 
 \subsection{Enkele begrippen}
 
-Om een cirkelbeweging te beschrijven, hebben we enkele begrippen nodig die je eventueel nog onbekend zijn. Zo is er de \emph{frequentie}. Het is algemeen het aantal trillingen of cyclussen van een periodieke beweging die per seconde worden doorlopen. Specifiek voor de cirkelbeweging is de frequentie dan het aantal keren dat de cirkel doorlopen wordt per tijdseenheid. De frequentie krijgt het symbool $f$ en heeft als eenheid de Hertz, $[f]=\rm Hz=s^{-1}$. Het begrip \emph{periode} gebruiken we voor de tijdsduur die nodig is voor het doorlopen van \'e\'en cyclus. Het symbool is $T$ en de eenheid seconde, $[T]=s$. Het aantal cyclussen dat in de periode wordt doorlopen is \'e\'en zodat de volgende relatie tussen de frequentie en de periode bestaat.
+Om een cirkelbeweging te beschrijven, hebben we enkele begrippen nodig die je eventueel nog onbekend zijn. 
+Zo is er de \emph{frequentie}. 
+Het is algemeen het aantal cyclussen van een periodieke beweging die per seconde worden doorlopen. 
+Specifiek voor de cirkelbeweging is de frequentie dan het aantal keren dat de cirkel doorlopen wordt per tijdseenheid. 
+De frequentie krijgt het symbool $f$ en heeft als eenheid de Hertz, $[f]=\rm Hz=s^{-1}$. 
+Het begrip \emph{periode} gebruiken we voor de tijdsduur die nodig is voor het doorlopen van \'e\'en cyclus. 
+Het symbool is $T$ en de eenheid seconde, $[T]=s$. 
+Het aantal cyclussen dat in de periode wordt doorlopen is één zodat de volgende relatie tussen de frequentie en de periode bestaat.
+
 \begin{equation*}
 	f=\frac{1}{T}
 \end{equation*}
@@ -53,7 +65,13 @@ Als laatste hebben we nog het begrip \textit{hoeksnelheid}.
 	  \end{tikzpicture}
 	% \includegraphics[width=0.35\textwidth]{ecb_hoeksnelheid}
 \end{image}
-Verschillende punten op je fietswiel hebben verschillende snelheden als hun afstand tot het centrum verschilt. Het ventieldopje moet immers in eenzelfde tijd meer afstand afleggen dat het sensortje van je snelheidsmeter. Toch bestaat het wiel uit \'e\'en geheel. Als je naar de omwentelingshoek kijkt die een straal vanuit het centrum door een punt op het wile maakt, dan is die voor alle punten gelijk. Hoe sneller het wiel draait, hoe groter ook de omwentelingshoek is die een straal gemaakt heeft. Daarom defini\"eren we de hoeksnelheid $\omega$ als de verandering van de omwentelingshoek tot de benodigde tijd.\footnote{De letter $\omega$ is de kleine letter van $\Omega$ en de laatste letter in het Griekse alfabet. Spreek $\omega$ uit als omega. Een $\omega$ is geen w, zoals ook een w geen $\omega$ is. O wee ($\omega$?) als je je op het examen in juni vergist \ldots}
+Verschillende punten op je fietswiel hebben verschillende snelheden als hun afstand tot het centrum verschilt. 
+Het ventieldopje moet immers in eenzelfde tijd meer afstand afleggen dan het sensortje van je snelheidsmeter. 
+Toch bestaat het wiel uit één geheel. 
+Als je naar de omwentelingshoek kijkt die een straal vanuit het centrum door een punt op het wiel maakt, dan is die voor alle punten gelijk. 
+Hoe sneller het wiel draait, hoe groter ook de omwentelingshoek is die een straal gemaakt heeft. 
+Daarom definiëren we de hoeksnelheid $\omega$ als de verandering van de omwentelingshoek tot de benodigde tijd.\footnote{De letter $\omega$ is de kleine letter van $\Omega$ en de laatste letter in het Griekse alfabet. Spreek $\omega$ uit als omega. Een $\omega$ is geen w, zoals ook een w geen $\omega$ is. O wee ($\omega$?) als je je op het examen in juni vergist \ldots}
+
 \begin{equation*}
 	\omega=\frac{\Delta\theta}{\Delta t}
 \end{equation*}
@@ -107,10 +125,22 @@ We beschouwen een punt dat een cirkelbeweging maakt met straal $r$. We voeren ee
 	% \includegraphics[width=0.4\textwidth]{ecb_positie}
 \end{image}
 Als we de omwentelingshoek $\theta$ meten vanaf de positieve $x$-as en en het tijdstip $t_0=0$ nemen, kunnen we de doorlopen omwentelingshoek als volgt in functie van de tijd schrijven.
+
 \begin{equation*}
-	\omega=\frac{\Delta\theta}{\Delta t}=\frac{\theta-\theta_0}{t-t_0}=\frac{\theta}{t}\quad\Rightarrow\quad\theta=\omega t
+	\omega=\frac{\Delta\theta}{\Delta t}=\frac{\theta-\theta_0}{t-t_0} %=\frac{\theta}{t}\quad\Rightarrow\quad\theta=\omega t
 \end{equation*}
-De co\"ordinaatfuncties vinden we dan als projecties op de $x$- en $y$-as. \todo{klopt die term coördinaatfunctie wel?}
+
+Als we \(t_0 = 0\) nemen, komt \(\theta_0\) overeen met de starthoek. 
+De formule herschrijven geeft dan voor de ECB een gelijkaardige formule als voor de eenparige rechtlijnige beweging (ERB).
+
+\begin{equation*}
+	\theta=\theta_0+\omega t
+\end{equation*}
+Voor de eenvoud nemen we meestal $\theta_0=0$ zodat $\theta=\omega t$. 
+
+
+
+De coördinaatfuncties vinden we dan als projecties op de $x$- en $y$-as. \todo{klopt die term coördinaatfunctie wel?}
 \begin{eqnarray*}
 	x(t)&=&r\cos\omega t\\
 	y(t)&=&r\sin\omega t
@@ -138,7 +168,8 @@ We krijgen dan voor de plaatsvector, de snelheid en de versnelling:
 	&\Updownarrow&\nonumber\\
 	\vec{a}&=&-\omega^2\vec{r}\label{versnelling}
 \end{eqnarray}
-Deze laatste gelijkheid is erg belangrijk. We vinden dat de versnelling steeds naar het middelpunt van de cirkel is ge\"ori\"enteerd \ldots! We noemen het bijgevolg een centripetale\footnote{Dit is niet hetzelfde als centrifugaal.} of middelpuntzoekende versnelling.
+
+Deze laatste gelijkheid is zeer belangrijk. We vinden dat de versnelling steeds naar het middelpunt van de cirkel is ge\"ori\"enteerd \ldots! We noemen het bijgevolg een centripetale\footnote{Dit is niet hetzelfde als centrifugaal.} of middelpuntzoekende versnelling.
 
 \begin{image}
 	
@@ -181,7 +212,10 @@ Deze laatste gelijkheid is erg belangrijk. We vinden dat de versnelling steeds n
     
     \end{tikzpicture}
 \end{image}
+
 Je zou dit resultaat opmerkelijk kunnen noemen aangezien de snelheid een constante grootte heeft.
+Maar tegelijk ook niet omdat we hier te maken hebben met een richtingsveranderende versnelling, de normale versnelling uit het hoofdstuk basisbegrippen.
+
 \begin{eqnarray}
 	v=\parallel\vec{v}\parallel&=&\sqrt{v_x^2+v_y^2}\nonumber\\
 	&=&\sqrt{(-\omega r\sin\omega t)^2+(\omega r\cos\omega t)^2}\nonumber\\
@@ -189,10 +223,11 @@ Je zou dit resultaat opmerkelijk kunnen noemen aangezien de snelheid een constan
 	&\Updownarrow&\nonumber\\
 	v&=&r\omega\label{snelheid}
 \end{eqnarray}
-Echter verandert de richting van de snelheid en aangezien de versnelling de verandering van de snelheid is, moet er een versnelling zijn. 
-Deze is naar het centrum ge\"ori\"enteerd omdat een fractie van een seconde later het object -- in vergelijking met de baan die het zou afleggen moest het volgens de snelheid die het op een bepaald moment heeft, voortbewegen -- iets dichter naar het centrum moet zijn gekomen. 
-De snelheidsvector is in grootte niet veranderd maar wel gedraaid, in de richting van het centrum. 
-Moest bovendien de versnelling niet loodrecht op de snelheid staan, dan zou de versnelling een component volgens de snelheid hebben wat zou betekenen dat de snelheid in die richting zou moeten toenemen.
+
+ Verandert de richting van de snelheid en aangezien versnelling de verandering van de snelheid is, moet er een versnelling zijn. 
+ Deze is naar het centrum ge\"ori\"enteerd omdat een fractie van een seconde later het object -- in vergelijking met de rechte baan die het zou afleggen moest het volgens de snelheid die het op een bepaald moment heeft, voortbewegen -- iets dichter naar het centrum moet zijn gekomen. 
+ De snelheidsvector is in grootte niet veranderd maar wel gedraaid, in de richting van het centrum. 
+ Moest bovendien de versnelling niet loodrecht op de snelheid staan, dan zou de versnelling een component volgens de snelheid hebben wat zou betekenen dat de snelheid in die richting zou moeten veranderen van grootte.
 
 \begin{image}
 	
