enkele kleine foutjes uit oef basis en 1D

--- a/kinematica/exercises/1dim_oef_denkvragen.tex
+++ b/kinematica/exercises/1dim_oef_denkvragen.tex
@@ -157,10 +157,8 @@
 \end{exercise}
 
 \begin{exercise}
-	Beargumenteer het gebruik van het model van een eenparig versnelde rechtlijnige beweging (EVRB) voor de vrije beweging van een wagentje op een helling. 
-	Denk daarbij aan een proefneming die we in de klas deden. 
-	De notie kracht moet je hier even buiten beschouwing laten.
-	Beschrijf hierbij de beweging van het wagentje en de bijbehorende grafieken van \(x(t), v(v) \text{ en } a(t)\)
+	Beargumenteer het gebruik van het model van een eenparig versnelde rechtlijnige beweging (EVRB) voor de vrije beweging van een wagentje op een helling. Denk daarbij aan een proefneming die we in de klas deden. De notie kracht moet je hier even buiten beschouwing laten.
+	
 	\begin{oplossing}
 		Het model beschrijft de meetgegevens accuraat.
 
@@ -241,11 +239,11 @@
 \end{exercise}
 
 \begin{exercise}
-	Vanaf een klif laat men vanop dezelfde hoogte twee identieke bollen vallen. Men laat de tweede bol \'e\'en seconde later vallen dan de eerste. De luchtwrijving is \textit{niet} te verwaarlozen. Dan
+	Vanaf een klif laat men vanop dezelfde hoogte twee identieke bollen vallen. Men laat de tweede bol één seconde later vallen dan de eerste. De luchtwrijving is \textit{niet} te verwaarlozen. Dan
 	\begin{multipleChoice}
-		\choice{zal de tweede bol iets later dan \'e\'en seconde na de eerste neerkomen.}
-		\choice{zal de tweede bol iets vroeger dan \'e\'en seconde na de eerste neerkomen.}
-		\choice[correct]{zal de tweede bol exact \'e\'en seconde na de eerste neerkomen.}
+		\choice{zal de tweede bol iets later dan één seconde na de eerste neerkomen.}
+		\choice{zal de tweede bol iets vroeger dan één seconde na de eerste neerkomen.}
+		\choice[correct]{zal de tweede bol exact één seconde na de eerste neerkomen.}
 		\choice{kunnen we hieromtrent geen uitspraak doen bij gebrek aan gegevens.}
 	\end{multipleChoice}
 	\begin{oplossing}
@@ -254,9 +252,7 @@
 \end{exercise}
 
 \begin{exercise}
-	Vanop een grote hoogte laat men achtereenvolgens twee stenen vallen met een tussentijd van 2 seconden. 
-	Op welke wijze verandert de afstand tussen beide stenen in de tijdsduur dat beide vallen?
-	Geef een tijdsafhenkelijk voorschrift voor die afstand. 
+	Vanop een grote hoogte laat men achtereenvolgens twee stenen vallen met een tussentijd van 2 seconden. Op welke wijze verandert de afstand tussen beide stenen in de tijdsduur dat beide vallen? Geef een tijdsafhankelijk voorschrift voor die afstand.
 	\begin{hint}
 		Begin met een grafische voorstelling.
 	\end{hint}
