--- a/kinematica/exercises/basis_oef.tex
+++ b/kinematica/exercises/basis_oef.tex
@@ -11,18 +11,18 @@
 
 
 \begin{exercise}
-Kan de snelheid van een voorwerp gelijk zijn aan nul, terwijl de versnelling verschillend is van nul? Motiveer je antwoord.
+	Kan de snelheid van een voorwerp gelijk zijn aan nul, terwijl de versnelling verschillend is van nul? Motiveer je antwoord.
 \end{exercise}
 
 
 \begin{exercise}
-Kan een voorwerp dat een positieve versnelling heeft een negatieve snelheid hebben? Kan het omgekeerde ook? Licht je antwoord toe.
+	Kan een voorwerp dat een positieve versnelling heeft een negatieve snelheid hebben? Kan het omgekeerde ook? Licht je antwoord toe.
 
-\begin{oplossing}
-    Ja, dat kan. Neem bijvoorbeeld een voorwerp dat je verticaal omhoog gooit. Als je de referentieas waarmee je de beweging wil beschrijven verticaal naar beneden kiest, zal de versnelling van de beweging positief zijn en de snelheid negatief. De snelheid is negatief omdat je tegengesteld aan de as beweegt en de versnelling is positief omdat de snelheid minder negatief wordt.
+	\begin{oplossing}
+		Ja, dat kan. Neem bijvoorbeeld een voorwerp dat je verticaal omhoog gooit. Als je de referentieas waarmee je de beweging wil beschrijven verticaal naar beneden kiest, zal de versnelling van de beweging positief zijn en de snelheid negatief. De snelheid is negatief omdat je tegengesteld aan de as beweegt en de versnelling is positief omdat de snelheid minder negatief wordt.
 
-    Het omgekeerde kan ook, draai gewoon de referentieas om.
-\end{oplossing}
+		Het omgekeerde kan ook, draai gewoon de referentieas om.
+	\end{oplossing}
 \end{exercise}
 
 \begin{exercise}
@@ -38,10 +38,7 @@ Kan een voorwerp dat een positieve versnelling heeft een negatieve snelheid hebb
 
 
 \begin{exercise}
-
-Een veerman tracht een stromende rivier loodrecht over te roeien. 
-Hij slaagt erin ten opzicht van het water een snelheid van \SI{2,00}{m/s} te ontwikkelen -- de stroomsnelheid is \SI{1,25}{m/s}. 
-De rivier is \SI{150}{\meter} breed. 
+Een veerman tracht een stromende rivier loodrecht over te roeien. Hij slaagt erin ten opzicht van het water een snelheid van \SI{2,00}{m/s} te ontwikkelen -- de stroomsnelheid is \SI{1,25}{m/s}. De rivier is \SI{150}{\meter} breed. 
 
 \begin{question}
  Onder welke hoek ten opzichte van de loodlijn op de oever moet hij steeds blijven roeien?
@@ -92,22 +89,22 @@ De tijd nodig om de overzijde te bereiken vinden we door zijn snelheid loodrecht
 \end{exercise}
 
 \begin{exercise}
-De coördinaten van een deeltje zijn als functie van de tijd wordt gegeven door
-\[
-\left\{
-\begin{aligned}
-	x&=t^2 \\
-	y&=t^2
-\end{aligned}
-\right.
-\]
+	De coördinaten van een deeltje worden als functie van de tijd gegeven door
+	\[
+	\left\{
+	\begin{aligned}
+		x&=t^2 \\
+		y&=t^2
+	\end{aligned}
+	\right.
+	\]
 
-\begin{multipleChoice}
-\choice{Dan is de versnelling steeds evenwijdig aan de $x$-as.}
-\choice{Dan is de versnelling steeds evenwijdig aan de $y$-as.}
-\choice[correct]{Dan maakt de versnelling steeds een hoek van $45^\circ$ met de $x$-as.}
-\choice{Dan wordt het deeltje niet versneld}
-\end{multipleChoice}
+	\begin{multipleChoice}
+	\choice{Dan is de versnelling steeds evenwijdig aan de $x$-as.}
+	\choice{Dan is de versnelling steeds evenwijdig aan de $y$-as.}
+	\choice[correct]{Dan maakt de versnelling steeds een hoek van $45^\circ$ met de $x$-as.}
+	\choice{Dan wordt het deeltje niet versneld}
+	\end{multipleChoice}
 \end{exercise}
 
 \begin{exercise}
