SI{}{} voor veel oefeningen erin gezet

--- a/kinematica/2dim_eenparige_cirkelbeweging.tex
+++ b/kinematica/2dim_eenparige_cirkelbeweging.tex
@@ -66,11 +66,7 @@ Als laatste hebben we nog het begrip \textit{hoeksnelheid}.
 	% \includegraphics[width=0.35\textwidth]{ecb_hoeksnelheid}
 \end{image}
 Verschillende punten op je fietswiel hebben verschillende snelheden als hun afstand tot het centrum verschilt. 
-Het ventieldopje moet immers in eenzelfde tijd meer afstand afleggen dan het sensortje van je snelheidsmeter. 
-Toch bestaat het wiel uit één geheel. 
-Als je naar de omwentelingshoek kijkt die een straal vanuit het centrum door een punt op het wiel maakt, dan is die voor alle punten gelijk. 
-Hoe sneller het wiel draait, hoe groter ook de omwentelingshoek is die een straal gemaakt heeft. 
-Daarom definiëren we de hoeksnelheid $\omega$ als de verandering van de omwentelingshoek tot de benodigde tijd.\footnote{De letter $\omega$ is de kleine letter van $\Omega$ en de laatste letter in het Griekse alfabet. Spreek $\omega$ uit als omega. Een $\omega$ is geen w, zoals ook een w geen $\omega$ is. O wee ($\omega$?) als je je op het examen in juni vergist \ldots}
+Het ventieldopje moet immers in eenzelfde tijd meer afstand afleggen dan een reflector op een spaak. Toch bestaat het wiel uit één geheel. Als je naar de omwentelingshoek kijkt die een straal door een punt op het wiel maakt, dan is die voor alle punten gelijk. Daarom definiëren we de hoeksnelheid $\omega$ als de verandering van de omwentelingshoek tot de benodigde tijd.\footnote{De letter $\omega$ is de kleine letter van $\Omega$ en de laatste letter in het Griekse alfabet. Spreek $\omega$ uit als omega. Een $\omega$ is geen w, zoals ook een w geen $\omega$ is. O wee ($\omega$?) als je je op het examen in juni vergist \ldots}
 
 \begin{equation*}
 	\omega=\frac{\Delta\theta}{\Delta t}
