--- a/kinematica/exercises/2dim_oef.tex
+++ b/kinematica/exercises/2dim_oef.tex
@@ -128,7 +128,7 @@
 \end{exercise}
 
 \begin{exercise}
-	Een tennisspeler, die $9,0\rm\,m$ voor het net staat, slaat een bal in horizontale richting met een snelheid van $25\rm\,m/s$. Het racket raakt de bal $1,8\rm\,m$ boven de grond. De bovenkant van het net is $1,00\rm\,m$ boven de grond. Vliegt de bal over het net, of er tegenaan?
+	Een tennisspeler, die \SI{9,0}{\meter} voor het net staat, slaat een bal in horizontale richting met een snelheid van \SI{25}{\meter\per\second}. Het racket raakt de bal \SI{1,8}{\meter} boven de grond. De bovenkant van het net is \SI{1,0}{\meter} boven de grond. Vliegt de bal over het net, of er tegenaan?
 \end{exercise}
 
 \begin{exercise}
@@ -151,8 +151,7 @@
 	\end{minipage}
 
 \begin{oplossing}
-	We gebruiken de baanvergelijking van de
-	horizontale worp. Voor eenzelfde horizontale afstand $x$ moeten we immers een nieuwe verticale afstand $y$ vinden, in functie van een andere beginsnelheid. Als het accent ' staat voor de nieuwe situatie waarin de beginsnelheid is verdubbeld, dan geldt:
+	We gebruiken de baanvergelijking van de horizontale worp. Voor eenzelfde horizontale afstand $x$ moeten we immers een nieuwe verticale afstand $y$ vinden, in functie van een andere beginsnelheid. Als het accent ' staat voor de nieuwe situatie waarin de beginsnelheid is verdubbeld, dan geldt:
 	\begin{eqnarray*}
 		y'&=&\frac{g}{2v_0'^2}x^2\\
 		&=&\frac{g}{2(2v_0)^2}x^2\\
@@ -164,7 +163,7 @@
 \end{exercise}
 
 \begin{exercise}
-	Een puntmassa beschrijft een cirkel met een straal van $5,0\rm\,cm$ en een periode van $0,33\rm\,s$. Welke afstand op de cirkel legt deze puntmassa in $7,0\rm\,s$ af?
+	Een puntmassa beschrijft een cirkel met een straal van\SI{5,0}{\centi\meter} en een periode van \SI{0,33}{\second}. Welke afstand op de cirkel legt deze puntmassa in \SI{7,0}{\second} af?
 	\begin{oplossing}
 		Omdat de grootte van de snelheid constant is, is de
 		afgelegde weg over de boog gelijk aan de snelheid vermenigvuldigd met de tijd:
@@ -181,20 +180,20 @@
 	Bereken de hoeksnelheid van de aarde om haar as. Bereken de snelheid van een punt van het aardoppervlak:
 	\begin{enumerate}
 		\item aan de evenaar,
-		\item op $51^\circ$ noorderbreedte.
+		\item op $\SI{51}{\degree}$ noorderbreedte.
 	\end{enumerate}
 	\begin{oplossing}
-		De hoeksnelheid kunnen we berekenen met de periode van de omwenteling van de aarde, nl. 24 uur, t.t.z. $86400\rm\,s$. Dat geeft
+		De hoeksnelheid kunnen we berekenen met de periode van de omwenteling van de aarde, nl. 24 uur, t.t.z. \SI{86400}{\second}. Dat geeft
 		\begin{eqnarray*}
-			\omega=\frac{2\pi}{T}=\frac{2\pi}{86400\rm\,s}=7,3\cdot10^{-5}\rm\,rad\,s^{-1}
+			\omega=\frac{2\pi}{T}=\frac{2\pi}{\SI{86400}{\second}}=\SI{7,3e-5}{\radian\per\second}
 		\end{eqnarray*}
-		De snelheid van een punt op het aardoppervlak aan de evenaar vinden we met het formuletje $v=r\omega$, waarbij $r$ de straal van de aarde\footnote{De straal van de aarde bedraagt 6370\rm\,km.} is.
+		De snelheid van een punt op het aardoppervlak aan de evenaar vinden we met het formuletje $v=r\omega$, waarbij $r$ de straal van de aarde\footnote{De straal van de aarde bedraagt \SI{6370}{\kilo\meter}.} is.
 		\begin{eqnarray*}
-		v=r_a\omega=\frac{2\pi r_a}{T}=463\rm\,m/s
+		v=r_a\omega=\frac{2\pi r_a}{T}=\SI{463}{\meter\per\second}%463\rm\,m/s
 		\end{eqnarray*}
-		Dit is nogal snel, het is namelijk $1667\rm\,km/h$.
+		Dit is nogal snel, het is namelijk \SI{1667}{\kilo\meter\per\hour}.% $1667\rm\,km/h$.
 
-		Op $51^\circ$ noorderbreedte\footnote{Onze school ligt op $50^\circ 52'36,69"$ noorderbreedte.} maken we ook een cirkelbeweging maar nu met een andere straal. De straal is nu de afstand van het punt op het aardoppervlak tot aan de rotatieas van de aarde, zie figuur. 
+		Op $\SI{51}{\degree}$ noorderbreedte\footnote{Onze school ligt op $50^\circ 52'36,\!69''$ noorderbreedte.} maken we ook een cirkelbeweging maar nu met een andere straal. De straal is nu de afstand van het punt op het aardoppervlak tot aan de rotatieas van de aarde, zie figuur. 
 		\begin{image}
 		% \centering
 		\includegraphics[width=0.4\textwidth]{aardehoeksnelheid2}
@@ -214,22 +213,22 @@
 		%%%\end{figure}
 		Met elementaire driehoeksmeetkunde vind je deze straal terug als $r'=r\cos\alpha$. De snelheid vinden we vervolgens op dezelfde manier.
 		\begin{eqnarray*}
-		v=r'\omega=\frac{2\pi r\cos\alpha}{T}=291\rm\,m/s
+		v=r'\omega=\frac{2\pi r\cos\alpha}{T}=\SI{291}{\meter\per\second}
 		\end{eqnarray*}
-		Dit is ook nog snel, nl. $1048\rm\,km/h$.
+		Dit is ook nog snel, nl. \SI{1048}{\kilo\meter\per\hour}.
 	\end{oplossing}
 \end{exercise}
 
 \begin{exercise}
-	Een auto rijdt door een bocht met een constante snelheid van \SI{50}{km/h}. Heeft de auto een andere versnelling wanneer hij diezelfde bocht neemt met een constante snelheid van \SI{70}{km/h}? Licht je antwoord toe.
+	Een auto rijdt door een bocht met een constante snelheid van \SI{50}{\kilo\meter\per\hour}. Heeft de auto een andere versnelling wanneer hij diezelfde bocht neemt met een constante snelheid van \SI{70}{\kilo\meter\per\hour}? Licht je antwoord toe.
 \end{exercise}
 
 \begin{exercise}
-	Als een auto met \SI{60}{km/h} een scherpe bocht neemt, en daarna met dezelfde snelheid een flauwe bocht, is de versnelling dan in beide gevallen gelijk? Leg uit.
+	Als een auto met \SI{60}{\kilo\meter\per\hour} een scherpe bocht neemt, en daarna met dezelfde snelheid een flauwe bocht, is de versnelling dan in beide gevallen gelijk? Leg uit.
 \end{exercise}
 
 \begin{exercise}
-	Tijdens het trainen van een ruimtevaarder wordt deze in een cirkelvormige beweging gebracht met een zetel, die zich aan het uiteinde van een horizontale arm van $5,00\rm\,m$ lengte bevindt. Indien hij versnellingen tot $10g$ kan verdragen, wat is dan de toegelaten maximale snelheid, en het maximale toegelaten toerental?
+	Tijdens het trainen van een ruimtevaarder wordt deze in een cirkelvormige beweging gebracht met een zetel, die zich aan het uiteinde van een horizontale arm van \SI{5,00}{\meter} lengte bevindt. Indien hij versnellingen tot $10g$ kan verdragen, wat is dan de toegelaten maximale snelheid, en het maximale toegelaten toerental?
 \end{exercise}
 
 \begin{exercise}
@@ -294,65 +293,55 @@ Het juist antwoord is dus (b).
 \end{exercise}
 
 \begin{exercise}
-	Een auto rijdt door een brugleuning en komt $5,2\rm\,m$ lager in het water terecht. De horizontale afstand tussen de plaats waar hij door de leuning ging en waar hij in het water terechtkwam, is $22\rm\,m$. Kan de politie hieruit afleiden met welke snelheid hij ongeveer reed? Was zijn werkelijke snelheid groter of kleiner?
-\begin{oplossing}
-\begin{eqnarray*}
-y&=&\frac{g}{2v_0^2}x^2\\
-&\Updownarrow&\\
-v_0&=&x\sqrt{\frac{g}{2y}}=21,37\rm\,m/s=77\rm\,km/h
-\end{eqnarray*}
-\end{oplossing}
-
-
-
+	Een auto rijdt door een brugleuning en komt \SI{5,2}{\meter} lager in het water terecht. De horizontale afstand tussen de plaats waar hij door de leuning ging en waar hij in het water terechtkwam, is \SI{22}{\meter}. Kan de politie hieruit afleiden met welke snelheid hij ongeveer reed? Was zijn werkelijke snelheid groter of kleiner?
+	\begin{oplossing}
+	\begin{eqnarray*}
+		y&=&\frac{g}{2v_0^2}x^2\\
+		&\Updownarrow&\\
+		v_0&=&x\sqrt{\frac{g}{2y}}=21,37\rm\,m/s=\SI{77}{\kilo\meter\per\hour}
+	\end{eqnarray*}
+	\end{oplossing}
 \end{exercise}
 
 \begin{exercise}
-	Een vliegtuig vliegt met een snelheid van $450\rm\,km/h$ op een hoogte van $920\rm\,m$.
-\begin{enumerate}
-\item Hoever voor het doel moeten de voedselpakketten gelost worden om op het doel terecht te komen?
-\item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
-\end{enumerate}
-\begin{oplossing}
-% \textit{gegeven}  $v_0=125\rm\,m/s$\newline$y=920\rm\,m$
-
-% \textit{gevraagd} $x$, $t$
-
-% \textit{oplossing}
-De afstand waarover de voedselpakketten in horizontale richting zijn vooruit gegaan, kunnen we vinden met de
-baanvergelijking. We weten namelijk hoever de pakketten naar beneden zijn gevallen en wat hun beginsnelheid is:
-\begin{eqnarray*}
-y&=&\frac{g}{2v_0^2}x^2\\
-&\Downarrow&\\
-x&=&v_0\sqrt{\frac{2y}{g}}=1712\rm\,m
-\end{eqnarray*}
-De valtijd voor de pakketten vinden we o.a. door naar de verticale
-valbeweging te kijken. Deze gebeurt onafhankelijk van wat er in de
-horizontale richting gebeurt, zodat:
-\begin{eqnarray*}
-y&=&\frac{1}{2}gt^2\\
-&\Downarrow&\\
-t&=&\sqrt{\frac{2y}{g}}=13,7\rm\,s
-\end{eqnarray*}
-\end{oplossing}
+	Een vliegtuig vliegt met een snelheid van \SI{450}{\kilo\meter\per\hour} op een hoogte van \SI{920}{\meter}.
+	\begin{enumerate}
+		\item Hoever voor het doel moeten de voedselpakketten gelost worden om op het doel terecht te komen?
+		\item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
+	\end{enumerate}
+	\begin{oplossing}
+		De afstand waarover de voedselpakketten in horizontale richting zijn vooruit gegaan, kunnen we vinden met de
+		baanvergelijking. We weten namelijk hoever de pakketten naar beneden zijn gevallen en wat hun beginsnelheid is:
+		\begin{eqnarray*}
+			y&=&\frac{g}{2v_0^2}x^2\\
+			&\Downarrow&\\
+			x&=&v_0\sqrt{\frac{2y}{g}}=\SI{1712}{\meter}%1712\rm\,m
+		\end{eqnarray*}
+		De valtijd voor de pakketten vinden we o.a. door naar de verticale valbeweging te kijken. Deze gebeurt onafhankelijk van wat er in de horizontale richting gebeurt, zodat:
+		\begin{eqnarray*}
+			y&=&\frac{1}{2}gt^2\\
+			&\Downarrow&\\
+			t&=&\sqrt{\frac{2y}{g}}=\SI{13,7}{\second}%13,7\rm\,s
+		\end{eqnarray*}
+	\end{oplossing}
 \end{exercise}
 
 \begin{exercise}
-	Een vliegwiel doet 450 omwentelingen per minuut. Zoek de hoeksnelheid van het wiel en de snelheid van een punt op $1,70\rm\,m$ van het middelpunt.
+	Een vliegwiel doet 450 omwentelingen per minuut. Zoek de hoeksnelheid van het wiel en de snelheid van een punt op \SI{1,70}{\meter} van het middelpunt.
 \end{exercise}
 
 \begin{exercise}
-	In een bocht met straal $160~\rm m$ verlaagt een autorenner zijn snelheid eenparig van $90~\rm m/s$ tot $75~\rm m/s$ in $2~\rm s$. Bereken de grootte van de versnelling van de wagen op het ogenblik dat de snelheid $80~\rm m/s$ is.
+	In een bocht met straal \SI{160}{\meter} verlaagt een autorenner zijn snelheid eenparig van \SI{90}{\meter\per\second} tot \SI{75}{\meter\per\second} in \SI{2}{\second}. Bereken de grootte van de versnelling van de wagen op het ogenblik dat de snelheid \SI{80}{\meter\per\second}.
 \begin{multipleChoice}
-\choice{$40,7~\rm m/s^2$}
-\choice[correct]{$40~\rm m/s^2$}
-\choice{$15~\rm m/s^2$}
-\choice{$7,5~\rm m/s^2$}
+\choice{\SI{40,7}{\meter\per\second\squared}}
+\choice[correct]{\SI{40}{\meter\per\second\squared}}
+\choice{\SI{15}{\meter\per\second\squared}}
+\choice{\SI{7,5}{\meter\per\second\squared}}
 \end{multipleChoice}
 \end{exercise}
 
 \begin{exercise} 
-	In de figuur is de versnelling en de snelheid van een puntmassa gegeven op een bepaald tijdstip. De grootte van de versnelling is $15,0\rm\,m/s^2$ en de vector maakt een hoek van $30^\circ$ met de straal van de cirkel. De straal van de cirkel is $2,50\rm\,m$. Bepaal de grootte van de normaalversnelling, de grootte van de tangentiële versnelling en de grootte van de baansnelheid.
+	In de figuur is de versnelling en de snelheid van een puntmassa gegeven op een bepaald tijdstip. De grootte van de versnelling is \SI{15,0}{\meter\per\second\squared} en de vector maakt een hoek van $\SI{30}{\degree}$ met de straal van de cirkel. De straal van de cirkel is \SI{2,50}{\meter}. Bepaal de grootte van de normaalversnelling, de grootte van de tangentiële versnelling en de grootte van de baansnelheid.
 %ECB_tangentieel nog invoegen ... !
 \end{exercise}
 
