aanpassing vraagstuk zieke man (vraagstelling was fout!!! raam was te kort)

--- a/kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex
+++ b/kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex
@@ -232,7 +232,7 @@
 \end{exercise}
 
 \begin{exercise}
-    ($\ast\ast\ast$) Van de Empire Stage Building in New York komt op \SI{250}{m} een ijskegel los en valt naar beneden.
+    ($\ast\ast\ast$) Van de Empire State Building in New York komt op \SI{250}{m} een ijskegel los en valt naar beneden.
     \begin{question} Na hoeveel tijd en met welke snelheid bereikt het ijskegeltje uiteindelijk de grond?                                                             
         \begin{oplossing}
             \begin{enumerate}
@@ -278,10 +278,10 @@
 % Bron Fysica Vandaag 2 p. 92
 
 \begin{exercise}
-    ($\ast\ast\ast$) Een zieke man zit voor een raam dat \SI{1,20}{m} hoog is. Een steen wordt vanop de grond opgeworpen en passeert het raam een keer opwaarts en een keer neerwaarts. De man ziet de steen in totaal voor exact één seconde.% (Een halve bij het opgaan en een halve bij het terug naar beneden gaan.)
+    ($\ast\ast\ast$) Een zieke man zit voor een raam dat \SI{1,40}{m} hoog is. Een steen wordt vanop de grond opgeworpen en passeert het raam een keer opwaarts en een keer neerwaarts. De man ziet de steen in totaal voor exact één seconde.% (Een halve bij het opgaan en een halve bij het terug naar beneden gaan.)
 
-    \begin{question} Bepaal de snelheid waarmee de steen de onderkant van het raam bereikt.  
-        \begin{oplossing} $\Delta x= v_1\Delta t-\frac{1}{2}g\Delta t^2$ zodat $v_1=\bar{v}+g\frac{\Delta t}{2}=\SI{4,85}{m/s}$ ($\Delta t = \SI{0,5}{s}$) 
+    \begin{question} Bepaal de snelheid waarmee de steen de onderkant van het raam bereikt in zijn opwaartse en zijn neerwaartse beweging.  
+        \begin{oplossing} $\Delta x= v_1\Delta t-\frac{1}{2}g\Delta t^2$ zodat $v_1=\bar{v}+g\frac{\Delta t}{2}=\SI{5,25}{m/s}$ ($\Delta t = \SI{0,5}{s}$). De snelheid in de neerwaartse beweging is op het teken na hetzelfde.
         \end{oplossing} 
     \end{question} % (die is op het teken na hetzelfde in zowel de opwaartse als de neerwaartse beweging).
     
