--- a/kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex
+++ b/kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex
@@ -280,7 +280,7 @@
 \begin{exercise}
     ($\ast\ast\ast$) Een zieke man zit voor een raam dat \SI{2,0}{m} hoog is. Een steen wordt vanop de grond opgeworpen en passeert het raam een keer opwaarts en een keer neerwaarts. De man ziet de steen in totaal voor exact één seconde.% (Een halve bij het opgaan en een halve bij het terug naar beneden gaan.)
 
-    \begin{question} Bepaal de snelheid waarmee de steen de onderkant van het raam bereikt in zijn opwaartse en zijn neerwaartse beweging.  
+    \begin{question} Bepaal de snelheid waarmee de steen de onderkant van het raam bereikt in zijn opwaartse beweging en in zijn neerwaartse beweging.
         \begin{oplossing} $\Delta x= v_1\Delta t-\frac{1}{2}g\Delta t^2$ zodat $v_1=\bar{v}+g\frac{\Delta t}{2}=\SI{6,5}{m/s}$ ($\Delta t = \SI{0,5}{s}$). De snelheid in de neerwaartse beweging is op het teken na hetzelfde.
         \end{oplossing} 
     \end{question} % (die is op het teken na hetzelfde in zowel de opwaartse als de neerwaartse beweging).
@@ -291,7 +291,7 @@
         \end{oplossing} 
     \end{question} 
 \end{exercise}
-% Bron Herman Van Bouwel
+% Bron Herman Van Bauwel
 
 \begin{exercise}
     ($\ast\ast\ast$) Een student gooit een sleutelbos verticaal omhoog naar een medebewoonster in een raam \SI{4,00}{m} hoger. De sleutels worden \SI{1,50}{s} later opgevangen.
