--- a/kinematica/2dim_eenparige_cirkelbeweging.tex
+++ b/kinematica/2dim_eenparige_cirkelbeweging.tex
@@ -96,28 +96,32 @@ We beschouwen een punt dat een cirkelbeweging maakt met straal $r$. We voeren ee
 		\draw[->] (-\R-0.5,0) -- (\R+1,0) node[right] {$x$};
 		\draw[->] (0,-\R-0.5) -- (0,\R+1) node[above] {$y$};
 
+		\draw[->, -latex, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0.5,0) node[red, midway, below] {$\vec{e}_x$};
+		\draw[->, -latex, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0,0.5) node[red, midway, left] {$\vec{e}_y$};
+
 		\coordinate (O) at (0,0);
 		\coordinate (A) at (\R,0);
 	  
 		\fill (0,0) circle (2pt) node[below left] {$O$};
 	  
 		% Point A on x-axis
-		\fill (\R,0) circle (2pt) node[below right] {$A$};
+		% \fill (\R,0) circle (2pt) node[below right] {$A$};
 	  
 		% Point P on circle (polar coordinates)
 		\coordinate (P) at (\ang:\R);
-		\fill (P) circle (2pt) node[above right] {$(x,y)$};
+		\fill (P) circle (1pt) node[above right] {$(x,y)$};
 	  
 		% Radius vector r
-		\draw[->] (0,0) -- (P) node[midway,above left] {$\vec{r}$};
+		\draw[->, -latex, very thick] (0,0) -- (P) node[midway,above left] {$\vec{r}$};
 	  
-		% Dotted projections
+		% Dotted lines
 		\draw[dashed] (P) -- (\ang:\R |- 0,0); % vertical projection
 		\draw[dashed] (P) -- (\ang:\R -| 0,0); % horizontal projection
+
+		% Dotted projections
+		\draw[->, -latex, thick] (O) -- (\ang:\R |- 0,0) node[midway, below] {\(x\)}; % vertical projection
+		\draw[->, -latex, thick] (O) -- (\ang:\R -| 0,0) node[midway, left] {\(y\)}; % horizontal projection
 	  
-		% Basis vectors e_x, e_y
-		\draw[->] (0,0) -- (1.2,0) node[midway,below] {$\vec{e}_x$};
-		\draw[->] (0,0) -- (0,1.2) node[midway,left] {$\vec{e}_y$};
 
 		\pic [draw, pic text = $ \theta$, angle eccentricity=1.5] {angle = A--O--P};
 	  
