--- a/kinematica/2dim_eenparige_cirkelbeweging.tex
+++ b/kinematica/2dim_eenparige_cirkelbeweging.tex
@@ -239,69 +239,75 @@ Maar tegelijk ook niet omdat we hier te maken hebben met een richtingsveranderen
  De snelheidsvector is in grootte niet veranderd maar wel gedraaid, in de richting van het centrum. 
  Moest bovendien de versnelling niet loodrecht op de snelheid staan, dan zou de versnelling een component volgens de snelheid hebben wat zou betekenen dat de snelheid in die richting zou moeten veranderen van grootte.
 
-\begin{image}
+
+
+
+
+%  TODO; betere versie onderstaande tikz (touwtje zoals in de text; bij ERB a =0 zetten en op knappunt met versnelling al weg)
+% \begin{image}
 	
-\begin{tikzpicture}[scale=1]
-    \def\radius{2}
-    \coordinate (center) at (0,0);
-    \def\vlength{1.2} 
-    \def\alength{0.4}
-    \def\imgsize{1cm} 
+% \begin{tikzpicture}[scale=1]
+%     \def\radius{2}
+%     \coordinate (center) at (0,0);
+%     \def\vlength{1.2} 
+%     \def\alength{0.4}
+%     \def\imgsize{1cm} 
     
-    \draw[thin,->] (-3,0) -- (3,0) node[right] {$x$};
-    \draw[thin,->] (0,-3) -- (0,3) node[above] {$y$};
+%     \draw[thin,->] (-3,0) -- (3,0) node[right] {$x$};
+%     \draw[thin,->] (0,-3) -- (0,3) node[above] {$y$};
     
-    % \foreach \x in {1,...,5}
-    %     \draw (\x,0) -- (\x,-0.2) node[below] {\x};
-    % \foreach \y in {1,...,5}
-    %     \draw (0,\y) -- (-0.2,\y) node[left] {\y};
+%     % \foreach \x in {1,...,5}
+%     %     \draw (\x,0) -- (\x,-0.2) node[below] {\x};
+%     % \foreach \y in {1,...,5}
+%     %     \draw (0,\y) -- (-0.2,\y) node[left] {\y};
     
     
-    \draw[dashed] (center) circle (\radius);
-	\fill (center) circle (2pt) node[below left] {$O$};
+%     \draw[dashed] (center) circle (\radius);
+% 	\fill (center) circle (2pt) node[below left] {$O$};
 
-    \foreach \angle in {-45, 0, 45, 125} {
-        \coordinate (P\angle) at ($(center) + (\angle:\radius)$);
+%     \foreach \angle in {-45, 0, 45, 125} {
+%         \coordinate (P\angle) at ($(center) + (\angle:\radius)$);
         
-        \node at ($(center) + (\angle:\radius + 0.4)$) {\(P_{\angle^\circ}\)};
+%         \node at ($(center) + (\angle:\radius + 0.4)$) {\(P_{\angle^\circ}\)};
         
-        \fill[blue] (P\angle) circle (2pt);
+%         \fill[blue] (P\angle) circle (2pt);
         
-        \draw[->, blue, very thick, -latex] 
-        (P\angle) --++ (\angle+90:\vlength)
-        node[thick, pos=0.6, font=\tiny, sloped, above] {$\vec{v}$};
+%         \draw[->, blue, very thick, -latex] 
+%         (P\angle) --++ (\angle+90:\vlength)
+%         node[thick, pos=0.6, font=\tiny, sloped, above] {$\vec{v}$};
         
-        % Centripetal acceleration vector (toward center)
+%         % Centripetal acceleration vector (toward center)
 
-        \fill[xmgreen] (P\angle) circle (2pt);
-        \draw[->, xmgreen, very thick, -latex] 
-            (P\angle) -- ($(P\angle)!\alength!(center)$)
-            node[thick, pos=0.8, font=\tiny, sloped, above] {$\vec{a}$};
+%         \fill[xmgreen] (P\angle) circle (2pt);
+%         \draw[->, xmgreen, very thick, -latex] 
+%             (P\angle) -- ($(P\angle)!\alength!(center)$)
+%             node[thick, pos=0.8, font=\tiny, sloped, above] {$\vec{a}$};
 		
 
-		\ifnum \angle=125{
-			\draw[dashed] (P\angle) --++ (\angle+90:6);
+% 		\ifnum \angle=125{
+% 			\draw[dashed] (P\angle) --++ (\angle+90:6);
 
-			\draw[->, blue, very thick, -latex] 
-			($(P\angle) + (\angle+90:2)$) --++ (\angle+90:\vlength)
-			node[thick, pos=0.6, font=\tiny, sloped, above] {$\vec{v}$};
+% 			\draw[->, blue, very thick, -latex] 
+% 			($(P\angle) + (\angle+90:2)$) --++ (\angle+90:\vlength)
+% 			node[thick, pos=0.6, font=\tiny, sloped, above] {$\vec{v}$};
 
-			\draw[->, blue, very thick, -latex] 
-			($(P\angle) + (\angle+90:4)$) --++ (\angle+90:\vlength)
-			node[thick, pos=0.6, font=\tiny, sloped, above] {$\vec{v}$};
+% 			\draw[->, blue, very thick, -latex] 
+% 			($(P\angle) + (\angle+90:4)$) --++ (\angle+90:\vlength)
+% 			node[thick, pos=0.6, font=\tiny, sloped, above] {$\vec{v}$};
 
-    	}
-		% \else
-		\fi 
+%     	}
+% 		% \else
+% 		\fi 
 
-	}
+% 	}
     
-    \end{tikzpicture}
-\end{image}
-
-% \begin{image}
-% 	\includegraphics[width=0.4\textwidth]{ballnostring}
+%     \end{tikzpicture}
 % \end{image}
+
+\begin{image}
+	\includegraphics[width=0.4\textwidth]{ballnostring}
+\end{image}
+% \captionof{figure}{De snelheid is rakend}
 
 
 Toelichting figuur: Moest er geen versnelling naar het centrum zijn -- bv. in het geval dat een touwtje met een ronddraaiend object aan, knapt -- dan zou de snelheid niet veranderen en het object op een rechte baan in het verlengde van de snelheid met een constante snelheid voortbewegen.
