--- a/kinematica/2dim_horizontale_worp.tex
+++ b/kinematica/2dim_horizontale_worp.tex
@@ -27,7 +27,7 @@ Wij beschouwen de worp in het luchtledige.
 		% Projectile parameters
 		\def\v{15}          % Initial speed
 		\def\theta{0}     % Launch angle in degrees
-		\def\g{40}       % Gravity
+		\def\g{50}       % Gravity
 		\def\vel{1}      % length of velocity vector
 		\def\hoogte{3}  
 		\def\imgsize{0.5cm}   
@@ -39,7 +39,8 @@ Wij beschouwen de worp in het luchtledige.
 
 
 		% Ball positions + velocity vectors in a single loop
-		\foreach \x in {0,1,3,...,9} {
+		\foreach \x [count=\i] in {0,2,4,...,8} {
+
 	
 			% y-coordinate
 			\pgfmathsetmacro{\y}{tan(\theta)*\x - ( \g / (2 * \v * \v * cos(\theta)^2) ) * (\x)^2 + \hoogte}
@@ -55,17 +56,21 @@ Wij beschouwen de worp in het luchtledige.
 			
 			% Velocity vector tangent to trajectory
 			% \draw[->, blue, very thick, -latex] (\x,\y) -- ++({\vel/sqrt(1+\slope*\slope)}, {\vel*\slope/sqrt(1+\slope*\slope)});
-			\draw[->, blue, very thick, -latex] (\x,\y) -- ++(\vel, {\vel*\slope}) node[blue, pos=0.9, right]{\(\vec{v}\)};
+			\draw[->, blue, very thick, -latex] (\x,\y) -- ++(\vel, {\vel*\slope}) node[blue, pos=0.8, right]{\(\vec{v}_{\tiny \i}\)};
 			\fill[blue] (\x,\y) circle (2pt);
 
+			\ifnum \x=0 
+			\else 
 			% Velocity decomposition
 			% x-component
 			\draw[->, red, thick, -latex] 
-			(\x,\y) -- ++(\vel,0) node[pos=0.9, above]{\(v_x\)};
+			(\x,\y) -- ++(\vel,0) node[above]{\(\vec{v}_x\)};
 
 			% y-component
+
 			\draw[->, purple, thick, -latex] 
-			(\x,\y) -- ++(0,{\vel*\slope}) node[midway, left]{\(v_y\)};
+			(\x,\y) -- ++(0,{\vel*\slope}) node[below]{\(\vec{v}_{\i, y}\)};
+			\fi
 
 			
 			% \draw[->, xmgreen, very thick, -latex] (\x,{\y-0.2}) -- ++(0, -1) node[xmgreen, midway, left]{\(a\)};
